--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+
+.banner{
+  /* position: fixed; */
+  height: 80px;
+  font-weight: bold;
+  width: 100%;
+  background-color: rgb(20, 27,50);
+  background-position: center;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo{
+   margin: 0px 0px;
+
+}
+.logo img{
+  margin-left:20px;
+  margin-top: 10px;
+  padding: 14px 20px;
+  height:50px;
+   width:100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav{
+   display: flex;
+   align-items: center;
+   justify-content: right;
+   margin-right: 100px;
+   margin-top: -100px;
+   position:sticky;
+   top:0;  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav .active{
+  color: aliceblue;
+  text-decoration: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    list-style: none;
+    margin-left: 20px;
+   font-size: 20px;
+   margin-top: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.nav button{
+  color:bisque;
+  background-color: rgb(20,27,50);
+  height: 30px;
+  font-size: 20px;
+  width: 100px;
+  border-color:bisque ;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px) {
+  .banner{
+    height: 300px;
   }
-  to {
-    transform: rotate(360deg);
+  .logo {
+    height: 80px;
+    margin-top: 50px;
+  }
+  .nav{
+    margin-top: -120px;
+  }
+  .nav,.active ,.nav button {
+   flex-direction: column;
+ 
   }
 }
